# django_and_stuff

./: .gitignore  manage.py  pyproject.toml
posgres_setup/: __init__.py  asgi.py  celery_application.py  settings.py  urls.py  wsgi.py
posgres_setup/postgres_setup_app/: models.py  urls.py  views.py
posgres_setup/postgres_setup_app/templates/postgres_setup_app/: author_add.html  author_details.html  author_list.html  book_add.html  book_details.html  book_list.html
posgres_setup/tests/: fixtures.py  test_views.py
postgres_setup_app/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
postgres_setup_app/migrations/: 0001_initial.py  0002_bookclub.py  0003_isbn13.py
postgres_setup_app/templates/postgres_setup_app/: author_add.html  author_confirm_delete.html  author_details.html  author_list.html  book_details.html  book_list.html  feedback.html
postgres_setup_app/tests/: test_views.py
