[tool.poetry]
name = "django_postgres_setup"
version = "0.1.0"
description = ""
authors = ["Maria Szczepanska <szczepanskamaria93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
